--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,10 +3,10 @@ name: Test and Build Workflow
 on:
   pull_request:
     branches:
-      - main
+      - *
   push:
     branches:
-      - main
+      - *
 
 jobs:
   build:
@@ -15,10 +15,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # This step uses the setup-java Github action: https://github.com/actions/setup-java
-      - name: Set Up JDK 14
+      - name: Set Up JDK 11
         uses: actions/setup-java@v1
         with:
-          java-version: 14
+          java-version: 11
       # dependencies: OpenSearch
       - name: Checkout OpenSearch
         uses: actions/checkout@v2
@@ -31,7 +31,7 @@ jobs:
       - name: Build OpenSearch
         working-directory: ./OpenSearch
         run: |
-          ./gradlew publishToMavenLocal -Dbuild.snapshot=false
+          ./gradlew publishToMavenLocal
       # dependencies: common-utils
       - name: Checkout common-utils
         uses: actions/checkout@v2
@@ -41,7 +41,7 @@ jobs:
           path: common-utils
       - name: Build common-utils
         working-directory: ./common-utils
-        run: ./gradlew publishToMavenLocal -Dbuild.snapshot=false -Dopensearch.version=1.1.0
+        run: ./gradlew publishToMavenLocal -Dopensearch.version=1.1.0
       # This step uses the checkout Github action: https://github.com/actions/checkout
       - name: Checkout Branch
         uses: actions/checkout@v2
@@ -65,11 +65,3 @@ jobs:
           pwd
       - name: Uploads coverage
         uses: codecov/codecov-action@v1.2.1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-      # This step uses the upload-artifact Github action: https://github.com/actions/upload-artifact
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v1
-        with:
-          name: cross-cluster-replication-plugin
-          path: cross-cluster-replication-artifacts
