--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ import org.opensearch.gradle.testclusters.OpenSearchCluster
 
 buildscript {
     ext {
-        opensearch_version = System.getProperty("opensearch_version", "1.1.0")
+        opensearch_version = System.getProperty("opensearch_version", "1.1.0-SNAPSHOT")
         kotlin_version = System.getProperty("kotlin.version", "1.3.72")
     }
 
